tests/invalid/StaticVar_Invalid_5.whiley
type nat is (int x) where x >= 0

nat x = -1
